 * K3b now displays a rough estimate on the remaining time for the current job.
 * New automatic media size mode for the projects. This means K3b uses the size from an inserted medium
   for the project maximum size.
 * Make a suggestion for the filename when saving a project based on the Volume ID (data projects) or the
   CD-Text title (Audio CD)

0.12
Added "Mpeg Still" support to Video-CD Project
FreeBSD support (thanks to Adriaan De Groot)
Support for all global CD-Text fields with cdrecord.
Some GUI changes: cleaned up the action dialogs, moved the burnfree option to the global settings dialog
	since turning it off should be a very seldomly used task.
Added support for multiple copies to the projects.
Added missed VCD 3.0 track interpretation option for SVCD's
New Lame encoding plugin providing a proper configuration dialog.
Added Bookmarks to the file browser.
Fixed window layering problem with windowmanagers != kwm
Added KPart plugin which converts a list of audio files into one of the supported encoder formats.
Allow disabling of CD-Text reading in cd-copy to overcome problems with CD-Text on some drives.
Check CD-Text crc when copying
Fixed incorrect PBC order, PBC now should work on all "standalone" DVD Players
Fixed waittime bug for PBC infinite timeout.
Import Audio Cue files into an audio project.
It is now possible to open an iso image or an audio cue file just like a project file.
Create cue files for an audio CD ripped into one single file
Show writer buffer state in addition to fifo buffer when writing CDs.
Show device buffer state for DVD writing (does not work always yet)
Fixed read and save setting in VideoCD project.
Big parts of the audio project have been rewritten to have a way better design:
	- K3b now does not create additional silence between the tracks by default
          the pregap is treated as part of the previous track like in all other
          writing applications.